# android-lame

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/igo/lame/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/igo/lame/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/igo/lame/: ExampleUnitTest.java
audiorecordlib/: CMakeLists.txt  build.gradle
audiorecordlib/src/androidTest/java/com/igo/audiorecord/: ExampleInstrumentedTest.java
audiorecordlib/src/main/: AndroidManifest.xml
audiorecordlib/src/main/cpp/: lame_utils.cpp
audiorecordlib/src/main/cpp/libmp3lame/: util.h
audiorecordlib/src/main/java/com/igo/audiorecord/: AudioRecordCallback.java  DataEncodeThread.java  LameUtils.java  MP3Recorder.java  PCMFormat.java
audiorecordlib/src/main/res/values/: strings.xml
audiorecordlib/src/test/java/com/igo/audiorecord/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
igomp3record/: build.gradle
igomp3record/src/androidTest/java/lame/igo/com/igomp3record/: ExampleInstrumentedTest.java
igomp3record/src/main/: AndroidManifest.xml
igomp3record/src/main/java/com/igo/mp3record/: AudioRecordCallback.java  DataEncodeThread.java  LameUtils.java  MP3Recorder.java  PCMFormat.java
igomp3record/src/main/jni/: Android.mk  Application.mk  com_igo_mp3record_LameUtils.h  lame_utils.cpp
igomp3record/src/main/res/values/: strings.xml
igomp3record/src/test/java/lame/igo/com/igomp3record/: ExampleUnitTest.java
smaple/: build.gradle
smaple/src/androidTest/java/com/igo/mp3record/smaple/: ExampleInstrumentedTest.java
smaple/src/main/: AndroidManifest.xml
smaple/src/main/java/com/igo/mp3record/smaple/: MainActivity.java
smaple/src/test/java/com/igo/mp3record/smaple/: ExampleUnitTest.java
